<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="crash_toast_text">Application crashed. Please send bug report by email.</string>
	<string name="asset_downloading">Downloading…</string>
	<string name="loading">Loading...</string>
	<string name="connection_failed">Connection failed!</string>
	<string name="dismiss">Dismiss</string>
    <string name="no_space_on_device">Not enough space in your internal storage</string>
    <string name="ok">OK</string>
    <string name="server_error">Bad response from server.</string>
    <string name="download_failed_please_check_your_connection">Download failed, please check your connection</string>
    <string name="please_check_your_connection">Please check your connection</string>
    <string name="app_name">Magmanager Library</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="data_manager_label">Data manager</string>
    <string name="issue_title_example">Example</string>
    <string name="issue_queued">Queued...</string>
    <string name="issue_is_unzipping">Unzipping...</string>
    <string name="refreshing">Refreshing data</string>
    <string name="issue_owned">Read</string>
    
    <!-- MuPDF -->
    
    <string name="no_media_warning">Storage Media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="open_failed">Unable to open document</string>
    <string name="content_failure">%1$s: %2$s</string>
    
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title">%1$s %2$s: %3$s</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter Password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching...</string>
    <string name="link_control">Link highlighting and enabling</string>
    <string name="no_further_occurences_found">No further occurences found</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="copy">Copy</string>
    <string name="strike_out">Strike out</string>
    <string name="highlight">Highlight</string>
    <string name="underline">Underline</string>
    <string name="version">1.0</string>
    
    <!-- store -->
    
    <string name="store_no_books_available">There are no books in the store yet, check again later</string>
    

    <!-- prices -->

    <string name="price_free">Free</string>
    <string name="price_loading">Loading</string>
    <string name="price_unavailable">Unavailable</string>
    <string name="price_bought">Bought</string>

    <!-- in app billing problems -->

    <string name="in_app_v3_problem">In App purchases are currently unavailable, make sure you have an google account logged in and try again please</string>
    <string name="purchase_unknown_error">There was an unknow error while trying to buy the book, try again later. If the problem persists, contact the developers</string>

    <!-- purchases -->

    <string name="purchase_thank_you">Book successfully purchased</string>
    <string name="issue_price_still_loading">Book price is still loading, wait please...</string>
    <string name="issue_price_unavailable">Book price is unavailable, try again later. If the problem persists, contact the developers</string>

    <!-- remote loading problems -->

    <string name="issue_remote_load_internet_problem">There is no available internet connection, turn it on and try again please</string>
    <string name="issue_remote_load_server_problem">The remote server has some problems now, try again later or contact the developers</string>
    <string name="issue_remote_load_unknow_problem">There was an unidentifiable problem connecting to the server, please try again later</string>
	<string name="problem">Problem</string>
    
    <!-- dialogs -->
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_delete_issues_text">Do you really want to delete the book?</string>

    <!-- deletion -->
    <string name="issue_delete_success">Book was successfully removed!</string>
    <string name="issue_delete_failure">An error has ocurred while removing the book!</string>
    <string name="book_is_being_deleted">Deleting book</string>
    <string name="delete">Delete</string>
    <string name="issue_cannot_be_deleted_not_ready">This book cannot be deleted, make sure you have the book, or its download is paused in order to delete it</string>
    
    <!-- common actions -->
    
    <string name="buy">Buy</string>
    <string name="read">Read</string>
    <string name="download">Download</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    
    <!-- samsung in app purchase -->

    <string name="null_string"></string>
    <string name="item_type">Item Type : </string>
    <string name="item_list_is_empty">Item list is empty</string>
    <string name="items_inbox_list_is_empty">Items inbox list is empty</string>
    <string name="load_item_list">Load Item List</string>
    <string name="load_items_inbox_list">Load Items Inbox List</string>
    <string name="purchase_one_item">Purchase One Item</string>
    <string name="item_list">Item List</string>
    <string name="items_inbox_list">Items Inbox List</string>
    <string name="in_app_purchase">In-app purchase</string>
    <string name="msg_success_initialize_iap">SamsungAccount authentication and in-app billing initialization was successful.</string>
    <string name="msg_iap_upgrade_is_requred">In-app Purchase upgrade is required.</string>
    <string name="msg_failed_to_initialize_iap">Failed to initialize the in-app purchase.</string>
    <string name="msg_failed_to_load_list_of_product">Failed to load list of product</string>
    <string name="msg_failed_to_load_list_of_purchase">Failed to load list of purchase</string>
    <string name="msg_iap_service_bind_failed">In-app Purchase Service Bind failed.</string>
    <string name="dlg_title_payment_error">Payment error</string>
    <string name="msg_payment_was_not_processed_successfully">The payment was not processed successfully.</string>
    <string name="dlg_title_payment_success">Payment success</string>
    <string name="dlg_msg_payment_success">The payment was successful</string>
    <string name="dlg_title_payment_cancelled">Payment canceled</string>
    <string name="dlg_msg_payment_cancelled">Payment has been canceled.</string>
    <string name="dlg_title_samsungaccount_authentication">SamsungAccount authentication</string>
    <string name="dlg_title_error">Error</string>
    <string name="msg_authentication_has_been_cancelled">SamsungAccount authentication has been cancelled</string>
    <string name="waiting_ing">Waiting for samsung authentication...</string>
    <string name="invalid_iap_package">IAP Application installed in your device is not valid!!</string>
    <string name="invalid_activity_params">Please check IAP setting information.</string>
    <string name="msg_invalid_purchase">Payment is not valid!!</string>
    <string name="msg_iap_is_not_installed">IAP is not installed. Install?</string>

</resources>